<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerObra"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.galeria.fragmentos.ObraFragment"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/estrela1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/estrela1"
        android:src="@drawable/star"
        app:layout_constraintEnd_toStartOf="@+id/estrela2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obra"
        app:srcCompat="@drawable/star" />

    <ImageView
        android:id="@+id/estrela4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/estrela4"
        android:src="@drawable/star"
        app:layout_constraintEnd_toStartOf="@+id/estrela5"
        app:layout_constraintStart_toEndOf="@+id/estrela3"
        app:layout_constraintTop_toBottomOf="@+id/obra"
        app:srcCompat="@drawable/star" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/share"
        android:src="@drawable/sharevariant"
        app:layout_constraintEnd_toStartOf="@+id/translate"
        app:layout_constraintTop_toBottomOf="@+id/obra"
        app:srcCompat="@drawable/sharevariant" />

    <ImageView
        android:id="@+id/estrela2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/estrela2"
        android:src="@drawable/star"
        app:layout_constraintEnd_toStartOf="@+id/estrela3"
        app:layout_constraintStart_toEndOf="@+id/estrela1"
        app:layout_constraintTop_toBottomOf="@+id/obra"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/textViewTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rebecca_horn"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewDescription2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/favoritethis"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:contentDescription="@string/favoritethis"
        android:src="@drawable/heartoutline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obra"
        app:srcCompat="@drawable/heartoutline" />

    <ImageView
        android:id="@+id/estrela3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/estrela3"
        android:src="@drawable/star"
        app:layout_constraintEnd_toStartOf="@+id/estrela4"
        app:layout_constraintStart_toEndOf="@+id/estrela2"
        app:layout_constraintTop_toBottomOf="@+id/obra"
        app:srcCompat="@drawable/star" />

    <ImageView
        android:id="@+id/estrela5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:contentDescription="@string/estrela5"
        android:src="@drawable/star"
        app:layout_constraintEnd_toStartOf="@+id/calendar"
        app:layout_constraintStart_toEndOf="@+id/estrela4"
        app:layout_constraintTop_toBottomOf="@+id/obra"
        app:srcCompat="@drawable/star" />

    <ImageView
        android:id="@+id/raster"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/raster"
        android:src="@drawable/raster"
        app:layout_constraintEnd_toStartOf="@+id/favoritethis"
        app:layout_constraintTop_toBottomOf="@+id/obra"
        app:srcCompat="@drawable/raster" />

    <ImageView
        android:id="@+id/obra"
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/obra1"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription2"
        app:srcCompat="@drawable/obra1" />

    <ImageView
        android:id="@+id/translate"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/translate"
        android:src="@drawable/googletranslate"
        app:layout_constraintEnd_toStartOf="@+id/raster"
        app:layout_constraintTop_toBottomOf="@+id/obra"
        app:srcCompat="@drawable/googletranslate" />

    <ImageView
        android:id="@+id/calendar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/calendar"
        android:src="@drawable/calendarsearch"
        app:layout_constraintEnd_toStartOf="@+id/download"
        app:layout_constraintTop_toBottomOf="@+id/obra"
        app:srcCompat="@drawable/calendarsearch" />

    <TextView
        android:id="@+id/textViewDescription2"
        android:layout_width="340dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:text="@string/flying_books_under_black_rain_painting_sculpture"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/estrela1"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle2" />

    <ImageView
        android:id="@+id/download"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/download"
        android:src="@drawable/download"
        app:layout_constraintEnd_toStartOf="@+id/share"
        app:layout_constraintTop_toBottomOf="@+id/obra"
        app:srcCompat="@drawable/download" />

</android.support.constraint.ConstraintLayout>