<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragments.home.Home"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/content_top_message"></include>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewAndar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/predio_5andar"
            android:contentDescription="@string/andar5" />

        <ImageView
            android:id="@+id/imageViewAndar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/andar4"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/predio_4andar" />

        <ImageView
            android:id="@+id/imageViewAndar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/andar3"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/predio_3andar" />

        <ImageView
            android:id="@+id/imageViewAndar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/andar2"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/predio_2andar" />

        <ImageView
            android:id="@+id/imageViewAndar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/andar1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/predio_1andar" />

        <ImageView
            android:id="@+id/imageViewAndarSS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ss"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/predio_ss" />

    </LinearLayout>
</LinearLayout>